# tum_getin

./: .gitignore
code/: LICENSE
code/APP/app/: build.gradle  proguard-rules.pro
code/backendServer/: README.txt  README_quick.txt  bower.json  generate-ssl-certs.sh  gruntfile.js  logger.js  package.json  server.js
code/backendServer/_examples/: README.txt  ca-cert.pem  client_tls.js  example-csr.pem  example.pfx  mongo.js  server_tls.js
code/backendServer/_v01/: package.json  server.js
code/backendServer/app/: routes.js
code/backendServer/config/: .gitignore  config.js  express.js  init.js  logger.js  message_codes.js
code/backendServer/logs/: README.txt
code/backendServer/test/: 1-interfaces-test.js  2-interfaces-test.js  README.txt  client.js  https-client-example.js  interface-tests.js  interfaces-test.js  interfaces.vows.js  registeruser_error.js  setup_tests.js  single-get-token-test.js  (+3 more)
code/nfcCommunicator/: CMakeLists.txt  README.md
code/nfcCommunicator/C++NfcMessaging/: INSTALL.md
code/nfcCommunicator/C++NfcMessaging/src/: apdumessage.cpp  apdumessage.h  nfc-utils.h  nfc_connector.cpp  nfc_connector.h
code/nfcCommunicator/PyNfcMessaging/: main.py  messager.py  nfc_emulator.py  nfc_error.py  nfc_reader.py  nfc_statemachine.py  nfcio.py
code/nfcCommunicator/PyNfcMessaging/nfcio/: __init__.py
code/nfcCommunicator/PyNfcMessaging/protocol/: APDU.py  NfcReader.py  __init__.py
code/nfcCommunicator/PyNfcMessaging/statemachine/: CardEmulation.py  ReaderIO.py  __init__.py
code/nfcCommunicator/cmake/modules/: FindLibNfc.cmake
code/nfcCommunicator/src/: apdumessage.h  main.cpp  nfc-utils.h  nfc_connector.cpp
code/pyBackend/: README.md  backendConnection.py
code/spec/: spec.txt
code/testResources/: .gitignore  README.txt  generate-ssl-certs.sh  real_user.json  real_user_example.json  real_user_readme.txt  user_01.json  user_01_cert.pem  user_01_key.pem  user_02.json  user_02_cert.pem  user_02_key.pem  user_03.json  user_03_cert.pem  user_03_key.pem
final_doku/: 0_project_flow.tex  0_tutorial.tex  1_introduction.tex  2_idea.tex  2_team.tex  3_architecture.tex  3_plan.tex  4_5_arch.tex  4_design_alternatives.tex  4_project_flow.tex  5_1_comm.tex  5_1_design_alternatives.tex  5_2_android.tex  5_description.tex  6_functions.tex  6_plan.tex  7_test_plan.tex  8_conclusion.tex  9_tutorial.tex  README.txt  _5_description.tex  _x_status_report.tex  report.synctex.gz(busy)  report.tex
final_doku/images/: architecture.pptx
idea_report/: 1_introduction.tex  2_idea.tex  3_architecture.tex  4_design_alternatives.tex  5_team.tex  6_plan.tex  README.txt  conclusion.tex  report.tex  team.tex  technical_proposals_architecture.tex  technical_proposals_design_alternatives.tex
workshop/ppt/: timeline.pptx
(+124 files in other folders)
